@@ -1,5 +1,6 @@
     - Changed COPYING to read MIT/X11 instead of Public Domain.
     - Changed the license in Build.PL to "mit".
+    - Updated Test::Run::Builder to include ACTION_tags.
 
 0.8.3
     - Added the Changes file.
